added NuGet package restoring code

--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         configuration: [Debug, Release]
+        nuget: [latest]
 
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
@@ -38,6 +39,14 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.x'
+    
+    # Restore NuGet packages
+    - name: Setup NuGet.exe
+      uses: nuget/setup-nuget@v1
+      with:
+        nuget-version: ${{ matrix.nuget }}
+    - name: Restore NuGet packages
+      run: nuget restore $env:Solution_Name
 
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
