Fix unit ladder climb bug (#659)
* Added ladderclimb bugfix.

* Added missing block to fix_ladderclimb.

* Added new codeblock to fix crashes when units are ordered by AI.

- tested extensively with AI and in editor. Pathfinding still wierd, but not part of this fix. It fixes the initial bug!

Co-authored-by: peterkohlberger <ckpengine@gmail.com>
Co-authored-by: Krarilotus <51748815+Krarilotus@users.noreply.github.com>

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -156,6 +156,11 @@
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_attr.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_fn.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_laddermen_with_enclosed_keep.block" />
+    <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb.block" />
+    <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb_2.block" />
+    <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb_3.block" />
+    <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb_4.block" />
+    <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb_pre.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_fletcher_bug.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_baker_disappear.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_moat_digging_unit_disappearing.block" />
