--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -156,6 +156,7 @@
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_attr.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_fn.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_laddermen_with_enclosed_keep.block" />
+    <EmbeddedResource Include="CodeBlocks\o_increase_path_update_tick_rate.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb_2.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb_3.block" />
