--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -156,6 +156,10 @@
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_attr.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_fn.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_laddermen_with_enclosed_keep.block" />
+    <EmbeddedResource Include="CodeBlocks\o_allow_overbuilding_building.block" />
+    <EmbeddedResource Include="CodeBlocks\o_allow_overbuilding.block" />
+    <EmbeddedResource Include="CodeBlocks\o_allow_overbuilding_build_function_exit.block" />
+    <EmbeddedResource Include="CodeBlocks\o_allow_overbuilding_currently_selected_building.block" />
     <EmbeddedResource Include="CodeBlocks\o_increase_path_update_tick_rate.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_ladderclimb_2.block" />
