--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -156,6 +156,7 @@
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_attr.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_crusader_archers_pitch_fn.block" />
     <EmbeddedResource Include="CodeBlocks\ai_fix_laddermen_with_enclosed_keep.block" />
+    <EmbeddedResource Include="CodeBlocks\fix_apple_orchard_build_size.block" />
     <EmbeddedResource Include="CodeBlocks\o_allow_overbuilding_building.block" />
     <EmbeddedResource Include="CodeBlocks\o_allow_overbuilding.block" />
     <EmbeddedResource Include="CodeBlocks\o_allow_overbuilding_build_function_exit.block" />
