--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -6,9 +6,10 @@ name: UCP Build
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ master, GUI-Update ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, GUI-Update ]
+    types: [assigned, opened, edited, ready_for_review, reopened, synchronize]
 
 jobs:
 
