AI housing customization (#726)
Tested in Crusader HD and Extreme with all 16 AI's

* AI housing customization

* Add localization

* Update conditional check

* Add option to customize AI delete housing

* Adjust housing logic

* Fix csproj because I manually removed a file

* Change delete housing to be buffer room after stop building houses rather than fixed value

* Set max values to 500 to support random use cases

Co-authored-by: Krarilotus <51748815+Krarilotus@users.noreply.github.com>

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Patching\EditTypes\BinaryEdit.cs" />
     <Compile Include="Patching\EditTypes\EditFailures.cs" />
     <Compile Include="Patching\Headers\LabelCollection.cs" />
+    <Compile Include="Patching\Headers\ParamHeader.cs" />
     <Compile Include="Patching\Headers\ValueHeader.cs" />
     <Compile Include="Patching\Patcher.cs" />
     <Compile Include="Patching\Percentage.cs" />
@@ -1514,6 +1515,8 @@
     <None Include="App.config" />
     <EmbeddedResource Include="CodeBlocks\s_resource.block" />
     <EmbeddedResource Include="CodeBlocks\o_default_multiplayer_speed_reset.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_buildhousing.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_deletehousing.block" />
     <None Include="CodeBlocks\o_healer_cmp.block" />
     <EmbeddedResource Include="CodeBlocks\o_jesterroam.block" />
     <EmbeddedResource Include="CodeBlocks\o_healer_plague.block" />
