--- a/UnofficialCrusaderPatch/AIC/Resources/Xander10alpha-Release-v1.3.json
+++ b/UnofficialCrusaderPatch/AIC/Resources/Xander10alpha-Release-v1.3.json
@@ -581,7 +581,8 @@ A cél, a már meglévő MI-k megerősítése minden szempontból, a következő
 			-AttUnitMain3, AttUnitMain4 auf Swordsman",
   "Polish": "Not translated",
   "Russian": "Not translated",
-  "Chinese": "Not translated"
+  "Chinese": "Not translated",
+  "Hungarian": "Not translated"
   },
 	"AICharacters": [
 		{
