--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -187,6 +187,12 @@
     <EmbeddedResource Include="CodeBlocks\o_restore_arabian_engineer_speech_engine.block" />
     <EmbeddedResource Include="CodeBlocks\o_restore_arabian_engineer_speech_lord_type.block" />
     <EmbeddedResource Include="CodeBlocks\o_restore_arabian_engineer_speech_purchase.block" />
+    <EmbeddedResource Include="CodeBlocks\o_seed_modification_possibility.block" />
+    <EmbeddedResource Include="CodeBlocks\o_seed_modification_possibility_fn1.block" />
+    <EmbeddedResource Include="CodeBlocks\o_seed_modification_possibility_fn2.block" />
+    <EmbeddedResource Include="CodeBlocks\o_seed_modification_possibility_fn3.block" />
+    <EmbeddedResource Include="CodeBlocks\o_seed_modification_possibility_fn4.block" />
+    <EmbeddedResource Include="CodeBlocks\o_seed_modification_possibility_fn5.block" />
     <EmbeddedResource Include="CodeBlocks\o_stop_player_keep_rotation.block" />
     <EmbeddedResource Include="CodeBlocks\o_stop_player_keep_rotation_get_preferred_relative_orientation.block" />
     <EmbeddedResource Include="CodeBlocks\ui_fix_laddermen_cost_display_in_engineers_guild.block" />
