Revert "[doc] Update CI"
This reverts commit 307ca425b06d716200070245c1e6a0a9602753b6.

--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -6,17 +6,14 @@ name: UCP Build
 on:
   workflow_dispatch:
   push:
-    branches:
-      - !gh-pages
+    branches: [ master, GUI-Update ]
   pull_request:
-    branches:
-      - !gh-pages
+    branches: [ master, GUI-Update ]
     types: [assigned, opened, edited, ready_for_review, reopened, synchronize]
 
 jobs:
 
   build:
-    if: "!startsWith(github.event.head_commit.message, '[doc]')"
 
     strategy:
       matrix:
