fixed embedded resource bug

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -1508,9 +1508,9 @@
       <Link>AIV\EvreyImproved\wolf8.aiv</Link>
     </EmbeddedResource>
     <EmbeddedResource Include="AIC\Resources\UCP-AI-Patch.json" />
-    <None Include="AIC\Resources\Kimberly-Balance-v1.5.json" />
-    <None Include="AIC\Resources\Krarilotus-aggressiveAI-v1.3.json" />
-    <None Include="AIC\Resources\Xander10alpha_Enhanced_Vanilla_AI_1.1.json" />
+    <EmbeddedResource Include="AIC\Resources\Kimberly-Balance-v1.5.json" />
+    <EmbeddedResource Include="AIC\Resources\Krarilotus-aggressiveAI-v1.3.json" />
+    <EmbeddedResource Include="AIC\Resources\Xander10alpha_Enhanced_Vanilla_AI_1.1.json" />
     <None Include="App.config" />
     <EmbeddedResource Include="CodeBlocks\s_resource.block" />
     <EmbeddedResource Include="CodeBlocks\o_default_multiplayer_speed_reset.block" />
