changing projhect number to 2.15b + adding the right castles also to console and gui project

--- a/UnofficialCrusaderPatchGUI/UnofficialCrusaderPatchGUI.csproj
+++ b/UnofficialCrusaderPatchGUI/UnofficialCrusaderPatchGUI.csproj
@@ -169,7 +169,7 @@
       xcopy "$(SolutionDir)resources"  "resources" /E /I /Y
       xcopy "$(SolutionDir)SHC_AIV\firefly_fixed"  "resources\aiv\EvreyFixed" /E /I /Y
       xcopy "$(SolutionDir)SHC_AIV\history"  "resources\aiv\EvreyHistory" /E /I /Y
-      xcopy "$(SolutionDir)SHC_AIV\firefly_vanilla"  "resources\aiv\EvreyImproved" /E /I /Y
+      xcopy "$(SolutionDir)SHC_AIV\skirmish"  "resources\aiv\EvreyImproved" /E /I /Y
     </PostBuildEvent>
   </PropertyGroup>
 </Project>
