Fix map sending problem
Reduces sent map size name from 125 characters to 62.

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -323,6 +323,7 @@
     <EmbeddedResource Include="CodeBlocks\ai_buildhousing.block" />
     <EmbeddedResource Include="CodeBlocks\ai_deletehousing.block" />
     <EmbeddedResource Include="CodeBlocks\ai_recruitstate_initialtimer.block" />
+    <EmbeddedResource Include="CodeBlocks\o_fix_map_sending.block" />
     <None Include="CodeBlocks\o_healer_cmp.block" />
     <EmbeddedResource Include="CodeBlocks\o_jesterroam.block" />
     <EmbeddedResource Include="CodeBlocks\o_healer_plague.block" />
