--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -367,10 +367,13 @@
     <EmbeddedResource Include="Localization\Russian.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Graphics\shield.png" />
+    <EmbeddedResource Include="Localization\Arabic.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Localization\Chinese.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Graphics\shield.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="CodeBlocks\o_fix_fletcher_bug.block" />
