--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -328,6 +328,9 @@
     <EmbeddedResource Include="CodeBlocks\ai_recruitstate_initialtimer.block" />
     <EmbeddedResource Include="CodeBlocks\o_disable_border_scrolling.block" />
     <EmbeddedResource Include="CodeBlocks\o_fix_map_sending.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_nowood_maxtime.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_noiron_maxtime.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_noflour_maxtime.block" />
     <None Include="CodeBlocks\o_healer_cmp.block" />
     <EmbeddedResource Include="CodeBlocks\o_jesterroam.block" />
     <EmbeddedResource Include="CodeBlocks\o_healer_plague.block" />
