Add AOBs for base stats and define BalanceConfig structure

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -96,6 +96,9 @@
     <Compile Include="AIC\Utils\RWAttributes.cs" />
     <Compile Include="AIV\AIVView.cs" />
     <Compile Include="Balance\BalanceChange.cs" />
+    <Compile Include="Balance\BalanceConfig.cs" />
+    <Compile Include="Balance\BalanceEnums.cs" />
+    <Compile Include="Balance\BalanceHelper.cs" />
     <Compile Include="Balance\BalanceView.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="Debug.cs" />
