Add missed csproj file from last changeset

--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Model\AICConfiguration.cs" />
     <Compile Include="Model\AIVConfiguration.cs" />
     <Compile Include="API\Startup.cs" />
+    <Compile Include="Model\ChangeBackendConfig.cs" />
+    <Compile Include="Model\ModBackendConfig.cs" />
     <Compile Include="Model\Patching\Installer.cs" />
     <Compile Include="Model\Patching\Utils\BinElements\BinCode.cs" />
     <Compile Include="Model\Patching\Utils\BinElements\BinCollection.cs" />
