Add temp electron make fix copying UCP backend dll from root folder to unpacked GUI application folder

--- a/unofficialcrusaderpatch-gui/package.json
+++ b/unofficialcrusaderpatch-gui/package.json
@@ -24,7 +24,11 @@
       "electronRebuildConfig": {
         "forceABI": 89
       },
-      "packagerConfig": {},
+      "packagerConfig": {
+        "afterExtract": [
+          "./build-scripts/packaging.js"
+        ]
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
