Fix npm build target

--- a/unofficialcrusaderpatch-gui/package.json
+++ b/unofficialcrusaderpatch-gui/package.json
@@ -5,7 +5,7 @@
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
-    "build": "electron-forge start",
+    "build": "electron-forge build",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
