--- a/unofficialcrusaderpatch-gui/.eslintignore
+++ b/unofficialcrusaderpatch-gui/.eslintignore
@@ -20,12 +20,10 @@ node_modules
 
 release/app/dist
 release/build
-config/dll
+config
 
 .idea
 npm-debug.log.*
 *.css.d.ts
 *.sass.d.ts
 *.scss.d.ts
-
-.vscode/
