--- a/unofficialcrusaderpatch-gui/package.json
+++ b/unofficialcrusaderpatch-gui/package.json
@@ -101,6 +101,7 @@
   "devDependencies": {
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
+    "@reduxjs/toolkit": "^1.8.1",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
@@ -108,6 +109,7 @@
     "@types/node": "17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^17.0.1",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -152,6 +154,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "opencollective-postinstall": "^2.0.3",
     "prettier": "^2.6.2",
+    "react-redux": "^8.0.0",
     "react-refresh": "^0.12.0",
     "react-refresh-typescript": "^2.0.4",
     "react-test-renderer": "^18.0.0",
