--- a/unofficialcrusaderpatch-gui/package.json
+++ b/unofficialcrusaderpatch-gui/package.json
@@ -105,6 +105,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
+    "@timfish/webpack-asset-relocator-loader": "^0.1.0",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.23",
     "@types/react": "^17.0.43",
