Fix yaml syntax

--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -79,8 +79,8 @@ jobs:
             OutputDebug
 
       - name:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+        uses: actions/checkout@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm run package
+        run: npm run package
