Fix yaml syntax

--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -78,8 +78,10 @@ jobs:
           path: |
             OutputDebug
 
-      - name:
+      - name: "Setup node"
         uses: actions/setup-node@v3
         with:
           node-version: 16
+
+      - name: "Package nodejs app"
         run: npm run package
