Update npm command with prefix

--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -84,4 +84,4 @@ jobs:
           node-version: 16
 
       - name: "Package nodejs app"
-        run: npm run package
+        run: npm run --prefix unofficialcrusaderpatch-gui/ package
