--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -78,10 +78,20 @@ jobs:
           path: |
             OutputDebug
 
-      - name: "Setup node"
+      - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: "Package nodejs app"
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Package nodejs app
         run: npm run --prefix unofficialcrusaderpatch-gui/ package
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: UnofficialCrusaderPatchGUI
+          path: |
+            release/build/*.exe
