--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies
+      - name: Install npm dependencies
         run: cd unofficialcrusaderpatch-gui && npm install && cd ..
 
       # Execute all unit tests in the solution
