Init: pass state from mod to change and bubble changes

--- a/unofficialcrusaderpatch-gui/tsconfig.json
+++ b/unofficialcrusaderpatch-gui/tsconfig.json
@@ -10,6 +10,7 @@
     "pretty": true,
     "sourceMap": true,
     "baseUrl": "./src",
+    "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
