--- a/unofficialcrusaderpatch-gui/package.json
+++ b/unofficialcrusaderpatch-gui/package.json
@@ -143,6 +143,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-ordered-imports": "^0.6.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
