--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -336,6 +336,14 @@
     <EmbeddedResource Include="CodeBlocks\ai_nowood_maxtime.block" />
     <EmbeddedResource Include="CodeBlocks\ai_noiron_maxtime.block" />
     <EmbeddedResource Include="CodeBlocks\ai_noflour_maxtime.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_resource_sell.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_building_health.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_unit_health.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_unit_arrowdmg.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_unit_xbowdmg.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_unit_stonedmg.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_unit_meleedmg.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_building_cost.block" />
     <None Include="CodeBlocks\o_healer_cmp.block" />
     <EmbeddedResource Include="CodeBlocks\o_jesterroam.block" />
     <EmbeddedResource Include="CodeBlocks\o_healer_plague.block" />
@@ -360,6 +368,7 @@
     <EmbeddedResource Include="CodeBlocks\u_jestermoveto_assassin.block" />
     <EmbeddedResource Include="CodeBlocks\u_spearmen_run.block" />
     <EmbeddedResource Include="CodeBlocks\o_xtreme_bar3.block" />
+    <EmbeddedResource Include="CodeBlocks\bal_resource_buy.block" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
